GN: crash with resample / fillet curve nodes (ngon fill) #121503

Closed
opened 2024-05-07 00:39:57 +02:00 by heini · 2 comments

Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 552.22

Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-05-04 11:29, hash: 3be6dbb02a06
Worked: 4.1.1

  • node tree: curve primitive = quadrilateral, resample curve, fillet curve, fill curve [NGon]
  • change resample parameter
  • mouse drag = crash
  • enter Value manually = no crash
Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 552.22 Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-05-04 11:29, hash: `3be6dbb02a06` Worked: 4.1.1 - node tree: curve primitive = quadrilateral, resample curve, fillet curve, fill curve [NGon] - change resample parameter - mouse drag = crash - enter Value manually = no crash
heini added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-05-07 00:39:58 +02:00
Member

Hi, thanks for the report. Can confirm the crash. Got assert BLI_assert(r_map.size() >= mask.min_array_size()); in debug build inside this function blender::index_mask::build_reverse_map

Hi, thanks for the report. Can confirm the crash. Got assert `BLI_assert(r_map.size() >= mask.min_array_size());` in debug build inside this function `blender::index_mask::build_reverse_map`
Member

Git bisect points to 1b7e67a851
@HooglyBoogly ^

Git bisect points to 1b7e67a851df631f528fc7ca4b6a5c68caa26208 @HooglyBoogly ^
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-05-07 19:20:53 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#121503
No description provided.