Fix #121503: Loose edges lines index buffer crash

The array used to not set the data for an edge multiple times
was the wrong size.